--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,32 +1,12 @@
 <div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
+  <div class="col-md-12">
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>May 31st, 9:30 am - 3:00 pm</td>  <td><a href="http://swcarpentry.github.io/shell-novice">The Unix Shell</a></td> </tr>
+      <tr> <td>June 1st, 9:30 am - 1:00 pm</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder">Plotting and Programming in Python (Part 1)</a></td> </tr>
+      <tr> <td>June 2nd, 9:30 am - 1:00 pm</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder">Plotting and Programming in Python (Part 2)</a></td> </tr>
+      <tr> <td>June 7th, 9:30 am - 1:00 pm</td>  <td><a href="http://swcarpentry.github.io/git-novice">Version Control with Git</a></td> </tr>
+      <tr> <td>END</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
     </table>
   </div>
 </div>
